fix: table styles cut off in income/expense report on firefox

--- a/src/extension/features/toolkit-reports/pages/income-vs-expense/styles.scss
+++ b/src/extension/features/toolkit-reports/pages/income-vs-expense/styles.scss
@@ -29,6 +29,7 @@ body.theme-dark {
     border-top: 3px solid var(--tk-ive-report-border-color);
     border-bottom: 3px solid var(--tk-ive-report-border-color);
     width: fit-content;
+    width: -moz-fit-content;
 
     .tk-monthly-totals-row {
       &__title-cell {
